--- a/app/templates/final_bubblemap_rom.html
+++ b/app/templates/final_bubblemap_rom.html
@@ -15,11 +15,13 @@
             border-radius: 8px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             max-width: 1000px;
+            width: 90%;
             text-align: justify;
             margin: 20px auto;
             display: flex;
             justify-content: center;
             align-items: center;
+            box-sizing: border-box;
         }
         .chart-container {
             width: 100%;
