--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,29 +2,34 @@
 <html lang="en">
 
 <head>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+
     <title>{% block title %}VizWizards{% endblock %}</title>
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-aria.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-messages.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.2.5/angular-material.min.js"></script><script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.2.5/angular-material.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://unpkg.com/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
 
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.24/angular-material.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;500&display=swap">
-    
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.24/angular-material.min.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;400;500&display=swap">
+
     {% block extra_styles %}{% endblock %}
 
 </head>
 
 <body ng-app="myApp">
-    
+
     <div class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <h2>Menu</h2>
@@ -58,7 +63,36 @@
                     <a href="/finalbox">Box Plot</a>
                 </div>
 
-
+                <button class="accordion-btn" onclick="toggleDropdown('life-expectancy')">Life Expectancy</button>
+                <div class="dropdown-content" id="life-expectancy">
+                    
+                    <button class="accordion-btn sub-menu-btn" onclick="toggleDropdown('global-evolution')">How Life Expectancy Evolved</button>
+                    <div class="dropdown-content" id="global-evolution">
+                        <a href="/finalline">Line:Historical Change</a>
+                        <a href="/le-stacked">Sex Ratio & Life Expectancy Trends</a>
+                    </div>
+                
+                    <button class="accordion-btn sub-menu-btn" onclick="toggleDropdown('distributions')">Distributions & Differences</button>
+                    <div class="dropdown-content" id="distributions">
+                        <a href="/le-violin">Violin Plot: Distributions</a>
+                        <a href="/finalbox">Box Plot: Regional Averages</a>
+                        <a href="/le-radar">Radar Plot: Distributions along indicators</a>
+                        
+                    </div>
+                
+                    <button class="accordion-btn sub-menu-btn" onclick="toggleDropdown('gender')">Gender Analysis</button>
+                    <div class="dropdown-content" id="gender">
+                        <a href="/le-bee">Male vs. Female Expectancy</a>
+                        <a href="/finalline">Female Life Expectancy at 60</a>
+                        <a href="/finalchoropleth">Female Healthy Life Ratio Map</a>
+                    </div>
+                
+                    <button class="accordion-btn sub-menu-btn" onclick="toggleDropdown('extreme-cases')">Extreme Cases & Uncertainty</button>
+                    <div class="dropdown-content" id="extreme-cases">
+                        <a href="/finalstackedbar">Lowest Male Life Expectancy</a>
+                        <a href="/le-error">Life Expectancy Ranges</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -67,8 +101,8 @@
             {% block content %}{% endblock %}
         </main>
     </div>
-   
-<script src="/static/js/base.js"></script>
+
+    <script src="/static/js/base.js"></script>
 </body>
 
 </html>
