add final project section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,7 +42,8 @@
       </a>
       <div class="circle-text">
         <h2>Top Emitters Flow</h2>
-        <p class="form-description">Trace the top 5 per capita CO2 emitters in each continent and their contribution trends.</p>
+        <p class="form-description">Trace the top 5 per capita CO2 emitters in each continent and their contribution
+          trends.</p>
       </div>
     </div>
 
@@ -67,6 +68,24 @@
       <div class="circle-text">
         <h2>Climate insights</h2>
         <p class="form-description">Analyze monthly max, min, and average temperatures across states and years.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Final Project Section -->
+  <section class="final-project-section">
+    <div class="final-project-container">
+      <div class="final-project-image">
+        <img src="/static/img/final.png" alt="Final Project" />
+      </div>
+      <div class="final-project-text">
+        <h2>Life Expectancy Jouney</h2>
+        <p>
+          Bringing together insights from multiple visualizations, this project presents an interactive dashboard that
+          explores climate data, CO2 emissions, temperature trends, and more. Dive in to explore comprehensive data and
+          uncover trends.
+        </p>
+        <a href="/finalproject" class="btn">Explore the Final Project</a>
       </div>
     </div>
   </section>
