add final project section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -85,7 +85,7 @@
           explores climate data, CO2 emissions, temperature trends, and more. Dive in to explore comprehensive data and
           uncover trends.
         </p>
-        <a href="/finalproject" class="btn">Explore the Final Project</a>
+        <a href="/finalline" class="btn">Explore the Final Project</a>
       </div>
     </div>
   </section>
