--- a/app/templates/finalscatter.html
+++ b/app/templates/finalscatter.html
@@ -146,7 +146,7 @@
             <span>2021</span>
         </div>
         <input type="range" id="year-slider" min="2000" max="2021" value="2000" step="1">
-        <div id="year-display">2000</div>
+        <span id="year-display">2000</span>
     </div>
     <div class="chart-container"></div>
 
@@ -157,3 +157,5 @@
 </html>
 
 {% endblock %}
+
+
