SLOPE plot fixed minor title issue

--- a/app/templates/final_slope_rom.html
+++ b/app/templates/final_slope_rom.html
@@ -29,7 +29,7 @@
     </style>
 </head>
 <body>
-    <h2 style="text-align:center;">Changes in Life Expectancy vs. Healthy Life Expectancy (All Years)</h2>
+    <h2 style="text-align:center;">Changes in Life Expectancy vs. Healthy Life Expectancy (2015-2021)</h2>
     
     <p style="text-align:center; max-width: 900px; margin: auto;">
         This slope chart visualizes the changes in <strong>Life Expectancy</strong> and <strong>Healthy Life Expectancy</strong>
