--- a/app/templates/final_heatmap_rom.html
+++ b/app/templates/final_heatmap_rom.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <style>
+        
         .container {
             width: 95%;
             max-width: 1200px;
@@ -18,21 +19,7 @@
             color: #333;
         }
 
-        .info-box {
-            background-color: #f0f0f0;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-            max-width: 1000px;
-            text-align: justify;
-            margin: 20px auto 40px;
-        }
-
-        .info-box p {
-            line-height: 1.6;
-            margin: 0;
-            font-size: 16px;
-        }
+       
 
         #heatmap-container {
             width: 100%;
@@ -44,7 +31,7 @@
     <div class="container">
         <h1 class="title">Life Expectancy vs. Health Indicators Heat Map</h1>
         
-        <div class="info-box">
+        <div>
             <p>
                 This heat map visualizes the relationship between life expectancy and various health indicators across different countries.
                 The color intensity represents the strength of correlation between variables, helping identify which health factors have
