--- a/app/templates/final_slope_rom.html
+++ b/app/templates/final_slope_rom.html
@@ -13,6 +13,18 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
+        .info-box {
+            background-color: #f0f0f0;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            max-width: 1000px;
+            text-align: justify;
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         select {
             font-size: 14px;
             padding: 5px;
@@ -31,12 +43,12 @@
 <body>
     <h2 style="text-align:center;">Changes in Life Expectancy vs. Healthy Life Expectancy (2015-2021)</h2>
     
-    <p style="text-align:center; max-width: 900px; margin: auto;">
-        This slope chart visualizes the changes in <strong>Life Expectancy</strong> and <strong>Healthy Life Expectancy</strong>
+    <p class="info-box" style="text-align:center; max-width: 900px; margin: auto;">
+        This slope chart visualizes the changes in Life Expectancy and Healthy Life Expectancy
         from 2015-2021 for selected countries. The solid lines represent total life 
         expectancy, while the dashed lines indicate the number of years people are expected to live in good health.
-        A small gap between the two lines suggests a <strong>high quality of life</strong>, whereas a larger gap indicates 
-        that people are living longer but with <strong>more years in poor health</strong>.
+        A small gap between the two lines suggests a high quality of life, whereas a larger gap indicates 
+        that people are living longer but with more years in poor health.
     </p>
 
     <div style="text-align: center; margin: 20px;">
