--- a/app/templates/finalstackedbar.html
+++ b/app/templates/finalstackedbar.html
@@ -53,11 +53,11 @@
 {% endblock %}
 {% block content %}
 <div class="content-wrapper">
-  <h1>Life Expectancy at Age 60 by Region (2000-2021)</h1>
+  <h1>Healthy Life Expectancy at Age 60 by Region (2000-2021)</h1>
 
   <div class="info-box">
     <p>
-      This stacked bar chart represents average life expectancy at age 60 across different regions over time. The
+      This stacked bar chart represents average healthy life expectancy at age 60 across different regions over time. The
       consistent height of the bars indicates that life expectancy beyond 60 has remained relatively stable, with
       variations among regions. Europe and the Americas have the highest life expectancy, while Africa shows the
       lowest. This visualization highlights longevity trends and aging populations in different global regions.
