--- a/app/templates/finalchoropleth.html
+++ b/app/templates/finalchoropleth.html
@@ -84,7 +84,7 @@
 
 <body>
     <div id="title-container">
-        <h2 style="margin: 0 auto; text-align: center;">Female Ratio in Healthy Life Expectancy than Male</h2>
+        <h2 style="margin: 0 auto; text-align: center;">Female Ratio in Healthy Life Expectancy than Male at age 60</h2>
 
     </div>
     <div class="inline-container">
