--- a/app/templates/le_radar.html
+++ b/app/templates/le_radar.html
@@ -17,7 +17,7 @@
             <!-- Countries Selection -->
             <md-input-container class="w-full">
                 <label>Select Countries (max 10)</label>
-                <md-select ng-model="selectedCountries" multiple placeholder="Choose countries" required>
+                <md-select ng-model="formData.selectedCountries" multiple placeholder="Choose countries" required>
                     <md-option ng-repeat="country in countries" ng-value="country">
                         {% raw %}{{country}}{% endraw %}
                     </md-option>
@@ -57,6 +57,6 @@
         </div>
     </div>
 </div>
-<script src="/static/js/le_radar.js"></script>
-
+<!-- <script src="/static/js/le_radar.js"></script> -->
+<script src="/static/js/le_spider.js"></script>
 {% endblock %}
