--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,6 +67,9 @@
                         <a href="/finalstackedbar">Stackedbar:Trends across regions</a>
                         <a href="/le-radar">Radar:A comparison between LE and HLE</a>
                         <a href="/le-stacked">Stacked:Sex ratio trends</a>
+                        <a href="/map5_r_bubblemap">Bubblemap: Life Expectancy Across Countries</a>
+                        <a href="/map3_r_splitplot">Bar:Focus on Males</a>
+                        <a href="/map4_r_heatmap">Heatmap: Focus on Females</a>
                     </div>
                 
                     <button class="accordion-btn sub-menu-btn" onclick="toggleDropdown('distributions')">Regional Perspective</button>
@@ -75,6 +78,9 @@
                         <a href="/finalbox">Box Plot: Regional averages</a>
                         <a href="/le-bee">Bubble:Male vs Female life expectancy</a>
                         <a href="/le-error">Error: Range of life expectancy</a>
+                        <a href="/map1_r_all">Alluvial: Life Expectancy vs. Healthy Life Expectancy (2021)</a>
+                        <a href="/map2_r_slope">Slope: 2 country comparison</a>
+                    
                     </div>
                 
                     <button class="accordion-btn sub-menu-btn" onclick="toggleDropdown('gender')">Gender Analysis</button>
