--- a/app/templates/bar.html
+++ b/app/templates/bar.html
@@ -5,8 +5,8 @@
 {% block content %}
 
 <h2>Annual CO2 Emmisions(per capita) of the year 1996</h2>
-<div class="inline-container">
-  <div id="chart-one-year"></div>
+<div class="inline-container-bar">
+  <div  id="plot-one-year"></div>
   <div class="text-box">
     <p>
       This bar chart displays the annual CO₂ emissions per capita for
@@ -19,9 +19,8 @@
   </div>
 </div>
 
-<div id="chart-one-year"></div>
-<div class="inline-container">
-  <div id="chart_decade"></div>
+<div class="inline-container-bar">
+  <div id="plot_decade"></div>
   <div class="text-box">
     <p>
       This chart displays the average CO₂ emissions by country from 2001
