heat map scale problem fixed, data accuracy is also doen

--- a/app/templates/final_heatmap_rom.html
+++ b/app/templates/final_heatmap_rom.html
@@ -32,12 +32,12 @@
         .tooltip {
             position: absolute;
             text-align: center;
-            padding: 8px;
-            font-size: 12px;
-            background: lightgray;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            visibility: hidden;
+            padding: 6px;
+            font: 12px sans-serif;
+            background: lightsteelblue;
+            border: 0px;
+            border-radius: 8px;
+            pointer-events: none;
         }
         .heatmap-container {
             display: flex;
