--- a/app/templates/finalstackedbar.html
+++ b/app/templates/finalstackedbar.html
@@ -34,8 +34,18 @@
   <h2>Average Healthy Life Expectancy at Age 60 (2000-2021)</h2>
   <label for="year">Select Year:</label>
   <select id="year"></select>
+
+  <div class="content-wrapper">
+    <div class="text-box">
+        <p>
+          This bar chart represents average healthy life expectancy at age 60 across different regions over time. The
+          consistent height of the bars indicates that life expectancy beyond 60 has remained relatively stable, with
+          variations among regions. Europe and the Americas have the highest life expectancy, while Africa shows the
+          lowest. This visualization highlights longevity trends and aging populations in different global regions.
+    </div>
   <svg width="900" height="600"></svg>
   <div class="tooltip"></div>
+
   
 <script src="/static/js/finalstackedbar.js"></script>
 </body>
